--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "shadcn-ui": "^0.9.2",
+    "yarn": "^1.22.22",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
